--- a/EmployeeManagement.Web/EmployeeManagement.Web.csproj
+++ b/EmployeeManagement.Web/EmployeeManagement.Web.csproj
@@ -5,10 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EmployeeManagement.Components\EmployeeManagement.Components.csproj" />
     <ProjectReference Include="..\EmployeeManagement.Models\EmployeeManagement.Models.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazority" Version="0.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.2.0-preview3.20168.3" />
   </ItemGroup>
 
